# rust-web-scrapper

./: .gitignore  Cargo.toml
src/: main.rs
src/migration/: schema.sql
